fixed clipping

--- a/site.css
+++ b/site.css
@@ -26,6 +26,7 @@ span#navtitle {
 
 div#navlinks {
   display:inline-block; 
+  max-height:1em;
 }
 
 .logo {
